New upload flow with s3 uploads
