# api/src/models/__init__.py
@@ -6,17 +6,20 @@ from .cache import MvtTileCacheModel
 from .geography import ZipCodeGeography
 from .graph import LayerModel, MapModel, NodeModel, ZipAssignmentModel
 from .jobs import MapJobModel
-from .permissions import UserMapRoleModel
+from .permissions import UserMapRoleModel, UserUploadRoleModel
+from .uploads import MapUploadModel
 
 __all__ = [
     "Base",
     "LayerModel",
     "MapJobModel",
     "MapModel",
+    "MapUploadModel",
     "MvtTileCacheModel",
     "NodeModel",
     "UserMapRoleModel",
     "UserModel",
+    "UserUploadRoleModel",
     "ZipAssignmentModel",
     "ZipCodeGeography",
 ]
